scenarios/tsb-training/artifacts/workload-manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio-injection: enabled
